src/test/deca/syntax/invalid/sansobjet/DeclaToBigInt.deca
//DeclaIntSpec.deca:5:8: no viable alternative at input '!'
//Description: teste declaration caractere special
//Resultats: erreur ligne 5: caractere speciaux  a la place d'in ident (decla var)
{
    int i = ;
}
